force-app/main/default/objects/PersonalRelation__c/PersonalRelation__c.object-meta.xml
<CustomObject>
    <description>27.02.2017, ary, Objekt wird operativ nicht mehr verwendet. Ziel war die Abbildung von persönlichen Beziehungen.</description>
    <label>Personal Relation</label>
    <nameField>
        <displayFormat>PRE-{00000}</displayFormat>
        <label>Personal Relation Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Relations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>