force-app/main/default/objects/PersonalRelation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Company Contact, Summary Contact, Private Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Internal Personal Relation</relationshipLabel>
    <relationshipName>InternalPersonalRelation</relationshipName>
    <type>Lookup</type>
</CustomField>