force-app/main/default/objects/PersonalRelation__c/fields/FriendlySalutation__c.field-meta.xml
<CustomField>
    <fullName>FriendlySalutation__c</fullName>
    <label>Friendly Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>