force-app/main/default/objects/PersonalRelation__c/fields/InernalAccount__c.field-meta.xml
<CustomField>
    <fullName>InernalAccount__c</fullName>
    <formula>InternalContact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Account</label>
    <type>Text</type>
</CustomField>