force-app/main/default/objects/PersonalRelation__c/fields/InternalContact__c.field-meta.xml
<CustomField>
    <fullName>InternalContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>External Personal Relations</relationshipLabel>
    <relationshipName>ExternalPersonalRelation</relationshipName>
    <type>Lookup</type>
</CustomField>